modif db password

--- a/templates/secrets.yml
+++ b/templates/secrets.yml
@@ -4,5 +4,5 @@ metadata:
   name: db-creds
 type: Opaque
 data:
-  user: RmFzdGFwaTIwMjRAIQ==
-  password: RmFzdGFwaTIwMjRAIQ==
+  user: RmFzdGFwaTIwMjQh
+  password: RmFzdGFwaTIwMjQh
